--- a/tpls/knowledgeRepo/knowledgeAdd.html
+++ b/tpls/knowledgeRepo/knowledgeAdd.html
@@ -112,7 +112,7 @@
         </h1>
         <label>
             <span>知识标题 :</span>
-            <input id="kTitle" type="text" name="kTitle" placeholder="填写知识标题" />
+            <input id="kTitle" type="text" name="kTitle" placeholder="填写知识标题（最多20个字符）" maxlength="20" />
         </label>
         <label>
 
