--- a/tpls/knowledgeRepo/knowledgeApprova.html
+++ b/tpls/knowledgeRepo/knowledgeApprova.html
@@ -209,7 +209,7 @@
 
         <label>
             <span>审批意见 :</span>
-            <textarea id="kApprMemo" name="kApprMemo" placeholder="填写审批意见"></textarea>
+            <textarea id="kApprMemo" name="kApprMemo" placeholder="填写审批意见(最多100个字符)"  maxlength="100"></textarea>
             <!--<input id="kApprMemo" name="kApprMemo" style="display:none"/>-->
             <input id="button" name="button" style="display:none"/>
             <!--<div id="div1" class="text">-->
@@ -271,6 +271,18 @@
 
         });
         $("#knowledge").submit(function () {
+
+            if(button=="不通过"){
+                if(document.getElementById("kApprMemo").value.trim()==""){
+                    confirm();
+                    return false;
+                }
+
+
+            }
+
+
+
             var str = location.href; //取得整个地址栏
             var num = str.indexOf("?");
             str = str.substr(num + 4);
@@ -290,8 +302,9 @@
                     var msg = '';
 
                     msg = "<div id='result'><strong>提交成功！</strong><br/>姓名："
-                    alert("审批成功！");
-                    location.href = "#!/knowledgeRepo/knowledgeList2.html";
+                    confirm1();
+
+
 
 
                 }
@@ -304,6 +317,64 @@
             location.href = "#!/knowledgeRepo/knowledgeList2.html";
         }
     )
+
+
+    function confirm() {
+        if ($("#myConfirm").length > 0) {
+            $("#myConfirm").remove();
+        }
+        var html = "<div class='modal fade' id='myConfirm' >"
+            + "<div class='modal-dialog' style='z-index:2901; margin-top:60px; width:400px; '>"
+            + "<div class='modal-content'>"
+            + "<div class='modal-header'  style='font-size:16px; '>"
+            + "<span class='glyphicon glyphicon-envelope'>&nbsp;</span>信息！<button type='button' class='close' data-dismiss='modal'>"
+            + "<span style='font-size:20px;  ' class='glyphicon glyphicon-remove'></span></button></div>"
+            + "<div class='modal-body text-center' id='myConfirmContent' style='font-size:18px; '>"
+            + "不通过时审批意见为必填项！！"
+            + "</div>"
+            + "<div class='modal-footer ' style=''>"
+            + "<button class='btn btn-danger' id='confirmOk'>确定</button>"
+
+            + "</div>" + "</div></div></div>";
+        $("body").append(html);
+
+        $("#myConfirm").modal("show");
+
+        $("#confirmOk").on("click", function () {
+            $("#myConfirm").modal("hide");
+
+        });
+    }
+
+
+    function confirm1() {
+        if ($("#myConfirm").length > 0) {
+            $("#myConfirm").remove();
+        }
+        var html = "<div class='modal fade' id='myConfirm' >"
+            + "<div class='modal-dialog' style='z-index:2901; margin-top:60px; width:400px; '>"
+            + "<div class='modal-content'>"
+            + "<div class='modal-header'  style='font-size:16px; '>"
+            + "<span class='glyphicon glyphicon-envelope'>&nbsp;</span>信息！<button type='button' class='close' data-dismiss='modal'>"
+            + "<span style='font-size:20px;  ' class='glyphicon glyphicon-remove'></span></button></div>"
+            + "<div class='modal-body text-center' id='myConfirmContent' style='font-size:18px; '>"
+            + "审批成功！"
+            + "</div>"
+            + "<div class='modal-footer ' style=''>"
+            + "<button class='btn btn-danger' id='confirmOk'>确定</button>"
+
+            + "</div>" + "</div></div></div>";
+        $("body").append(html);
+
+        $("#myConfirm").modal("show");
+
+        $("#confirmOk").on("click", function () {
+            $("#myConfirm").modal("hide");
+            location.href = "#!/knowledgeRepo/knowledgeList2.html";
+        });
+    }
+
+
 
 
 </script>
