--- a/tpls/knowledgeRepo/knowledgeList2.html
+++ b/tpls/knowledgeRepo/knowledgeList2.html
@@ -18,6 +18,7 @@
 
 
 <div class="main-container" id="main" ng-controller="knlgList2Ctrl">
+    <div id="grid-search"></div>
     <!--jqGrid所在-->
     <table id="grid-table"></table>
     <!--jqGrid 浏览导航栏所在-->
