--- a/tpls/home.html
+++ b/tpls/home.html
@@ -2,9 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>中环知识库管理系统</title>
-		<meta name="keywords" content="中环知识库管理系统" />
-		<meta name="description" content="中环知识库管理系统" />
+		<title>天软知识库管理系统</title>
+		<meta name="keywords" content="天软知识库管理系统" />
+		<meta name="description" content="天软知识库管理系统" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- basic styles -->
 		<link href="/stylesheets/bootstrap.min.css" rel="stylesheet" />
@@ -65,7 +65,7 @@
 					<a href="#" class="navbar-brand">
 						<small>
 							<i class="icon-leaf"></i>
-							中环知识库管理系统
+							天软知识库管理系统
 						</small>
 					</a><!-- /.brand -->
 				</div><!-- /.navbar-header -->
