--- a/tpls/knowledgeRepo/knowledgeEdit.html
+++ b/tpls/knowledgeRepo/knowledgeEdit.html
@@ -148,6 +148,8 @@
     </form>
 </div>
 <script type="text/javascript">
+    var E = window.wangEditor;
+    var editor1 = new E('#div1');  // 两个参数也可以传入 elem 对象，class 选择器
 
     $(function() {
         var str=location.href; //取得整个地址栏
@@ -222,8 +224,7 @@
 //    }
 
 
-    var E = window.wangEditor;
-    var editor1 = new E('#div1');  // 两个参数也可以传入 elem 对象，class 选择器
+
 
     editor1.customConfig.menus = [
         'head',  // 标题
@@ -252,6 +253,13 @@
 
     $(function(){
         $("#knowledge").submit(function(){
+
+
+            if(document.getElementById("kTitle").value.trim()=="") {
+                confirm();
+                return false;
+            }
+
             var data = $(this).serialize(); //序列化表单数据
 
             $.ajax({
@@ -261,8 +269,7 @@
                 headers: {"Current-UserId": JSON.parse(window.sessionStorage.getItem("currUser")).id},
                 success: function (data) {
                     var msg = '';
-                    alert("编辑成功！")
-                    location.href="#!/knowledgeRepo/knowledgeList.html"
+                    confirm2();
                     msg = "<div id='result'><strong>提交成功！</strong><br/>姓名："
 
 
@@ -290,6 +297,80 @@
     $("#back").click(function () {
         location.href="#!/knowledgeRepo/knowledgeList.html";
     })
+
+
+    function confirm() {
+        if ($("#myConfirm").length > 0) {
+            $("#myConfirm").remove();
+        }
+
+
+        var html = "<div class='modal fade' id='myConfirm' >"
+            + "<div class='modal-dialog' style='z-index:2700; margin-top:30px; width:400px; '>"
+            + "<div class='modal-content'>"
+            + "<div class='modal-header'  style='font-size:16px; '>"
+            + "<span class='glyphicon glyphicon-envelope'>&nbsp;</span>信息！<button type='button' class='close' data-dismiss='modal'>"
+            + "<span style='font-size:20px;  ' class='glyphicon glyphicon-remove'></span></button></div>"
+            + "<div class='modal-body text-center' id='myConfirmContent' style='font-size:18px; '>"
+            + "知识标题是必填项！！"
+            + "</div>"
+            + "<div class='modal-footer ' style=''>"
+            + "<button class='btn btn-danger' id='confirmOk'>确定</button>"
+
+            + "</div>" + "</div></div></div>";
+        $("body").append(html);
+
+
+
+
+        editor1.$textElem.attr('contenteditable', false);
+
+
+        $("#myConfirm").modal("show");
+
+
+
+
+        $("#confirmOk").on("click", function () {
+            $("#myConfirm").modal("hide");
+            editor1.$textElem.attr('contenteditable', true);
+            $("#kTitle").focus();
+
+        });
+    }
+
+    function confirm2() {
+        if ($("#myConfirm").length > 0) {
+            $("#myConfirm").remove();
+        }
+
+
+        var html = "<div class='modal fade' id='myConfirm' >"
+            + "<div class='modal-dialog' style='z-index:2700; margin-top:30px; width:400px; '>"
+            + "<div class='modal-content'>"
+            + "<div class='modal-header'  style='font-size:16px; '>"
+            + "<span class='glyphicon glyphicon-envelope'>&nbsp;</span>信息！<button type='button' class='close' data-dismiss='modal'>"
+            + "<span style='font-size:20px;  ' class='glyphicon glyphicon-remove'></span></button></div>"
+            + "<div class='modal-body text-center' id='myConfirmContent' style='font-size:18px; '>"
+            + "编辑成功！！"
+            + "</div>"
+            + "<div class='modal-footer ' style=''>"
+            + "<button class='btn btn-danger' id='confirmOk'>确定</button>"
+
+            + "</div>" + "</div></div></div>";
+        $("body").append(html);
+        editor1.$textElem.attr('contenteditable', false);
+        $("#myConfirm").modal("show");
+
+        $("#confirmOk").on("click", function () {
+            $("#myConfirm").modal("hide");
+            editor1.$textElem.attr('contenteditable', true);
+            location.href="#!/knowledgeRepo/knowledgeList.html";
+
+        });
+    }
+
+
 
 </script>
 
