--- a/tpls/index.html
+++ b/tpls/index.html
@@ -105,6 +105,7 @@
                 toastr.error("密码不能为空");
                 return false;
             }
+            toastr.info("正在登陆...");
             $.post(BASE_URL+"user/login.form", {
                 "username": username,
                 "password": password
@@ -115,16 +116,27 @@
                     console.log("response"+response)
                     window.sessionStorage.setItem("currUser", response);
 //                    response = $.parseJSON(response);
-                    toastr.info("登录成功,正在跳转到首页");
+                    toastr.remove();
+                    toastr.success("登录成功,正在跳转到首页");
                     id = window.setTimeout(function () {
                         window.clearTimeout(id);
                         window.location.href = "home.html";
                     }, 1000);
                 } else {
+                    toastr.remove();
                     toastr.error("登录失败,用户名或密码错误");
                 }
             });
         });
+        $(window).keydown(function (e) {
+            switch(e.keyCode){
+                case 13:
+                    $("#submit").click();
+                    break;
+                default:
+                    break;
+            }
+        })
     });
 </script>
 </body>
