用户角色列表 微调

--- a/tpls/user/userList.html
+++ b/tpls/user/userList.html
@@ -7,7 +7,7 @@
 <body ng-app="ulistapp">
     <div class="row" ng-controller="uGridCtrl">
         <div class="col-xs-12"  style="height: 100%">
-            <div id="grid-search"></div>
+            <div id="grid-search" style="margin-bottom: 10px"></div>
             <table id="grid-table"></table>
             <div id="grid-pager"></div>
         </div>
