--- a/tpls/knowledgeRepo/knowledgeList.html
+++ b/tpls/knowledgeRepo/knowledgeList.html
@@ -11,7 +11,13 @@
     <!--<link rel="stylesheet" type="text/css" href="/javascripts/jquery-ui-1.10.3.full.min.js"/>-->
     <!--<link rel="stylesheet" type="text/css" href="/plugins/jqGrid/css/ui.jqgrid-bootstrap-ui.css"/>-->
     <!--<link rel="stylesheet" type="text/css" href="/plugins/jqGrid/css/ui.jqgrid.css"/>-->
+<style>
+    #grid-search{
+        margin-bottom: 10px;
 
+    }
+
+</style>
 
 </head>
 <body ng-app="knlgList">
