--- a/tpls/knowledgeRepo/knowledgeList2.html
+++ b/tpls/knowledgeRepo/knowledgeList2.html
@@ -12,7 +12,13 @@
     <!--<link rel="stylesheet" type="text/css" href="../components/plugins/jqGrid/css/ui.jqgrid-bootstrap-ui.css"/>-->
     <!--<link rel="stylesheet" type="text/css" href="../components/plugins/jqGrid/css/ui.jqgrid.css"/>-->
 
+    <style>
+        #grid-search{
+            margin-bottom: 10px;
 
+        }
+
+    </style>
 </head>
 <body ng-app="knlgList2">
 
