--- a/tpls/knowledgeRepo/knowledgeAdd.html
+++ b/tpls/knowledgeRepo/knowledgeAdd.html
@@ -106,7 +106,7 @@
 </head>
 <body ng-app="knlgAdd">
 <div class="basic-grey" ng-controller="knlgAddCtrl">
-    <form method="post" class="STYLE-NAME" id="knowledge">
+    <form method="post" class="STYLE-NAME" id="knowledge" >
         <h1>知识录入
             <!--<span>Please fill all the texts in the fields.</span>-->
         </h1>
@@ -128,6 +128,7 @@
             <!--<textarea id="kAnswer" name="kAnswer" placeholder="填写知识解答"></textarea>-->
             <input id="kAnswer"  name="kAnswer" style="display:none"/>
             <div id="div1" class="text">
+                填写知识解答（最多不超过100个字符）
             </div>
 
 
