toastr 全局设置，默认显示位置修改

--- a/tpls/home.html
+++ b/tpls/home.html
@@ -292,6 +292,7 @@
 		<script src="/javascripts/ace.min.js"></script>
 
 		<script src="/plugins/toastr/toastr.min.js"></script>
+		<script src="/plugins/toastr/toastrSetting.js"></script>
 		<!--angularjs scripts-->
 
 		<script src="/javascripts/angular.min.js"></script>
