--- a/tpls/index.html
+++ b/tpls/index.html
@@ -19,6 +19,7 @@
     <script src="/stylesheets/ace/respond.js"></script>
     <script src="/javascripts/jquery-2.0.3.min.js"></script>
     <script src="/plugins/toastr/toastr.min.js"></script>
+    <script src="/plugins/toastr/toastrSetting.js"></script>
 </head>
 
 <body class="login-layout" style="background-color:#F5F6F7">
