--- a/tpls/home.html
+++ b/tpls/home.html
@@ -139,7 +139,7 @@
 						<!--</li>-->
 
 						<li >
-							<a data-toggle="dropdown" href="#" class="dropdown-toggle">
+							<a data-toggle="dropdown"  class="dropdown-toggle" style="cursor: default">
 								<img class="nav-user-photo" src="/images/user.jpg" alt="Jason's Photo" />
 								<span class="user-info">
 									<small>欢迎光临,</small>
@@ -151,17 +151,17 @@
 							</a>
 
 							<ul class="user-menu pull-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
-								<li>
-									<a href="#">
-										<i class="icon-cog"></i>
-										设置
-									</a>
-								</li>
+								<!--<li>-->
+									<!--<a href="#">-->
+										<!--<i class="icon-cog"></i>-->
+										<!--设置-->
+									<!--</a>-->
+								<!--</li>-->
 
 								<li>
-									<a href="#">
+									<a href="#" ui-sref="密码修改">
 										<i class="icon-user"></i>
-										个人资料
+										修改密码
 									</a>
 								</li>
 
@@ -184,30 +184,6 @@
 			<script type="text/javascript">
 				try{ace.settings.check('main-container' , 'fixed')}catch(e){}
 			</script>
-			<!--<div id="login-box-bg" ng-hide="{{hideflag}}" ng-controller="loginboxCtrl">-->
-				<!--<div id="login-box" class="container">-->
-					<!--<div class="row">-->
-						<!--<div class="col-sm-12" style="text-align: center">-->
-							<!--<h1>登录</h1>-->
-						<!--</div>-->
-						<!--<div class="col-sm-10 col-sm-offset-1" >-->
-							<!--<form class="form-horizontal" role="form">-->
-								<!--<div class="form-group">-->
-									<!--<label>用户名</label>-->
-									<!--<input class="form-control" name="username" ng-model="username" placeholder="输入用户名" type="text">-->
-								<!--</div>-->
-								<!--<div class="form-group">-->
-									<!--<label>密码</label>-->
-									<!--<input class="form-control" name="password" ng-model="password" placeholder="输入密码" type="password">-->
-								<!--</div>-->
-								<!--<div style="text-align: center">-->
-									<!--<button class="btn btn-info" style="display: inline-block" ng-click="login()">登录</button>-->
-								<!--</div>-->
-							<!--</form>-->
-						<!--</div>-->
-					<!--</div>-->
-				<!--</div>-->
-			<!--</div>-->
 			<div class="main-container-inner">
 				<a class="menu-toggler" id="menu-toggler" href="#">
 					<span class="menu-text"></span>
